src/test/ui/feature-gate-inline_const.rs
fn main() {
    let _ = const {
        //~^ ERROR expected expression, found keyword `const`
        true
    };
}
